<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">种乎</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_activity">活动</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_test">数据自测</string>
    <string name="action_settings">设置</string>
    <string name="action_feedback">联系我们</string>
    <string name="plus_plaza">广场</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_weather">天气信息</string>
    <string name="plus_plant_info">种植周边</string>
    <string name="plus_take_photo">拍照分享</string>
    
    <string name="default_text">初始化中...</string>
    
    <string name="account_hint">账号/邮箱</string>
    <string name="password_hint">密码</string>
    <string name="register">注册</string>
    <string name="login">开始种植</string>
    
    <string name="data_name_1">定植篮水位: </string>
    <string name="data_unit_1">mm</string>
    <string name="data_name_2"> 环境光强 : </string>
    <string name="data_unit_2">lx</string>
    <string name="refresh">同步数据</string>
    <string name="operator">管理植物</string>
    <string name="back">返回</string>
    <string name="plant_operator_title_text">参数设置</string>
    <string name="send">提交数据</string>
    
    <string name="pull_to_refresh">下拉刷新...</string>
    <string name="release_to_refresh">松开立即刷新</string>
    <string name="loading">载入中...</string>
    <string name="updated">上次更新</string>
    
    <string name="chat_hint">和好友畅聊</string>
    <string name="send_chat_message">发送</string>
    
    <string name="register_help">帮助</string>
    <string name="register_account_hint">请输入您的手机号或邮箱</string>
    <string name="register_password_hint">请输入您想要设置的密码</string>
    <string name="affirm_password_hint">请再次输入密码</string>
</resources>
