<?xml version="1.0" encoding="utf-8"?>                   
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_match_screen" >
     
    <ImageView
        android:id="@+id/register_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" 
        android:src="@drawable/my_head" />

    
    
    <RelativeLayout
        android:id="@+id/register_rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_picture" >
	 
        <LinearLayout
            android:id="@+id/register_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/popup_bg"
            android:orientation="vertical" >
		
            <EditText
                android:id="@+id/register_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_bg"
                android:hint="@string/register_account_hint"
                android:inputType="text"
                android:padding="5dp" />
		 
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/devide_line" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/login_bg"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:padding="5dp" />     
     
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="@color/devide_line" />
	
	        <EditText
	            android:id="@+id/affirm_password"
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:layout_margin="2dp"
	            android:background="@drawable/login_bg"
	            android:hint="@string/affirm_password_hint"
	            android:inputType="textPassword"
	            android:padding="5dp" />
               
        </LinearLayout>

        <Button
            android:id="@+id/affirm_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_user_info"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/register"
            android:textColor="@android:color/white" />
 
    
    </RelativeLayout>

    <Button
        android:id="@+id/register_help"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_user_btn_selector"
        android:text="@string/register_help"
        android:textColor="@color/LawnGreen"
        android:textSize="16sp" />

</RelativeLayout>